Change email texts

--- a/src/mail/templates/cocreation.hbs
+++ b/src/mail/templates/cocreation.hbs
@@ -6,11 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+    Hello,<br /><br />
+    This is to confirm that we have received your message sent to the Agora Team. We greatly appreciate your reaching out to us.<br /><br />
+    For your records, here is a copy of the message you sent:<br /><br />
     Title: {{ form.title }}<br /><br />
     Description: {{ form.description }}<br /><br />
     Category: {{ form.category }}<br /><br />
     Impact: {{ form.impact }}<br /><br />
     Implementation: {{ form.implementation }}<br /><br />
     Contact information: {{ form.contactInfo }}<br /><br />
+    We will review your message and respond to your inquiries or concerns as soon as possible.<br /><br />
+    Thank you for your interest in Agora.<br /><br />
+    Regards,<br />
+    The Agora Team
 </body>
 </html>
