--- a/src/mail/templates/newUser.hbs
+++ b/src/mail/templates/newUser.hbs
@@ -12,6 +12,15 @@
     </style>
 </head>
 <body>
-    Confirm your email: <a href="{{ url }}?email={{ email }}&token={{ token }}">{{ url }}?email={{ user.email }}&token={{ token }}</a>
+    Dear {{ fullname }},<br /><br />
+    We are excited to have on board at Agora, the platform that opens doors to impactful collaborations in emerging and frontier economies.<br /><br />
+    To begin your journey, we invite you to create your profile by clicking on the link below:<br />
+    <a href="{{ url }}?email={{ email }}&token={{ token }}">{{ url }}?email={{ user.email }}&token={{ token }}</a>
+    Agora is completely free to use. Our mission is to facilitate meaningful collaborations and empower you to make a lasting impact.<br /><br />
+    our profile on Agora will be the gateway to a world of opportunities and connections. If you have any questions or need assistance, feel free to reach out to our
+    support team at <a href="agora@fenu.org">agora@fenu.org</a><br /><br />
+    We are excited to see the incredible contributions you will bring to the Agora community. Thank you for being a part of our mission.<br /><br />
+    Regards,<br />
+    The Agora Team
 </body>
 </html>
