Fixed url in register mail

--- a/src/mail/templates/newUser.hbs
+++ b/src/mail/templates/newUser.hbs
@@ -15,7 +15,7 @@
     Dear {{ fullname }},<br /><br />
     We are excited to have on board at Agora, the platform that opens doors to impactful collaborations in emerging and frontier economies.<br /><br />
     To begin your journey, we invite you to create your profile by clicking on the link below:<br />
-    <a href={{ url }}?"email="{{ email }}"&token="{{ token }}>{{ url }}?email={{ email }}&token={{ token }}</a>
+    <a href="{{ url }}?email={{ email }}&token={{ token }}">{{ url }}?email={{ email }}&token={{ token }}</a>
     Agora is completely free to use. Our mission is to facilitate meaningful collaborations and empower you to make a lasting impact.<br /><br />
     our profile on Agora will be the gateway to a world of opportunities and connections. If you have any questions or need assistance, feel free to reach out to our
     support team at <a href="agora@fenu.org">agora@fenu.org</a><br /><br />
