Fixed forgot password url email

--- a/src/mail/templates/forgotPassword.hbs
+++ b/src/mail/templates/forgotPassword.hbs
@@ -14,7 +14,7 @@
 <body>
     Dear {{ user.fullname }},<br /><br />
     If you have requested the password reset, kindly follow the link below to create a new, secure password:<br /><br />
-    <a href={{ url }}"?email="{{ user.email }}"&token="{{ token }}>{{ url }}?email={{ user.email }}&token={{ token }}</a><br /><br />
+    <a href="{{ url }}?email={{ user.email }}&token={{ token }}">{{ url }}?email={{ user.email }}&token={{ token }}</a><br /><br />
     Best regards,<br />
     Agora Team
 </body>
